--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "express-list-endpoints": "^6.0.0",
     "helmet": "^7.1.0",
     "http-status-codes": "^2.3.0",
+    "openai": "^4.0.0",
     "path": "^0.12.7",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.0"
